
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {int token; } ;
struct TYPE_6__ {TYPE_1__ t; } ;
typedef TYPE_2__ LexState ;


 int luaX_next (TYPE_2__*) ;

__attribute__((used)) static int testnext(LexState*ls,int c){
if(ls->t.token==c){
luaX_next(ls);
return 1;
}
else return 0;
}
